--- a/index.html
+++ b/index.html
@@ -122,6 +122,11 @@
           }
         });
       });
+       window.addEventListener("scroll",()=>{
+        let navbar=document.querySelector(".navbar");
+        if(window.scrollY>50) navbar.classList.add("scrolled");
+        else navbar.classList.remove("scrolled");
+      });
     </script>
   </body>
 </html>
