--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
+    <header class="navbar>
       <div class="logo">
         <span class="logo-text">SubSurf</span>
         <img src="assets/surfboard.png" alt="" id="logo-img" />
